<resources>
    <string name="app_name">SeventhWork</string>
    <string name="android_icon">ANDROID_ICON</string>
    <string name="login_text_infomation">L O G I N</string>
    <string name="register_text_infomation">R E G I S T E R</string>
    <string name="et_account_hint">请输入你的账号</string>
    <string name="et_password_hint">请输入你的密码</string>
    <string name="et_repassword_hint">请再次输入你的密码</string>
    <string name="login_no_account">没有账号？现在去注册->>>></string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <string name="hint_main_et_search">搜索玩安卓</string>
    <string name="todo_item_rv_iv">用户头像</string>
    <string name="todo_rv_item_like">喜欢图标</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>